@@ -1,6 +1,11 @@
 2022-01-18 Gabriele Gorla <gorlik@yahoo.com>
 
     * sdcc/src/mos6502/gen.c:
+      Improve pusReg/PullReg.
+
+2022-01-18 Gabriele Gorla <gorlik@yahoo.com>
+
+    * sdcc/src/mos6502/gen.c:
       Improve dry_run_cost accuracy.
 
 2022-01-17 Gabriele Gorla <gorlik@yahoo.com>
